--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,48 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.element::-webkit-scrollbar { width: 0 !important }
+.element { overflow: -moz-scrollbars-none; }
+.bg-container{
+  background: url("./assets/bg.jpeg");
+  width: 100%;
+  height: 100vh;
+  background-size:     cover;                      /* <------ */
+  background-repeat:   no-repeat;
+  background-position: center center;
   pointer-events: none;
+  font-family: 'Roboto Mono', sans-serif;
+  color: white;
+  
+}
+
+.title {
+  font-size: 5em;
+  position: relative;
+  top: 40%;
+  -webkit-transform: translateY(-40%);
+  -ms-transform: translateY(-40%);
+  transform: translateY(-40%);
+}
+
+
+
+.subtitle {
+  font-size: 2em;
+  position: relative;
+  top: 40%;
+  -webkit-transform: translateY(-40%);
+  -ms-transform: translateY(-40%);
+  transform: translateY(-40%);
+}
+
+.read-more {
+  position: relative;
+  top: 80%;
 }
 
 .App-header {
+  font-family: 'Roboto Mono', monospace;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -29,5 +63,34 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 600px) {
+  .title {
+    width: 400px;
+    margin: auto;
+    padding: 10px;
+    font-size: 2em;
+  }
+
+  .subtitle {
+    width: 400px;
+    margin: auto;
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 420px) {
+  .title {
+    width: 100%;
+    padding: 0px;
+    padding-bottom: 15px;
+    font-size: 1.6em;
+  }
+
+  .subtitle {
+    width: 100%;
+    font-size: 1em;
   }
 }
